@@ -3,6 +3,7 @@
 * Add support for `color_space`, `color_range`, `color_primaries`,
   `color_trc` and `chroma_location`.
 * Add `tell` to `Av`.
+* Added `Av.set_input_metadata`
 
 1.2.8 (01-01-2026)
 =====
